# poseidon

./: README.md
backend/: Cargo.toml  poseidon.db
backend/migrations/: 0001_init.sql  0002_users_add_email.sql  0003_server_avatar.sql  0004_message_updated_at.sql  0005_server_user_invites.sql  0006_demo_data.sql
backend/src/: auth.rs  config.rs  dto.rs  error.rs  main.rs  state.rs  ws.rs
backend/src/routes/: auth.rs  channels.rs  dm.rs  friends.rs  mod.rs  servers.rs  users.rs
docs/: README.md  prompt-analysis.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src-tauri/: tauri.client2.conf.json  tauri.conf.json
frontend/src/lib/api/: client.ts  ws.ts
frontend/src/lib/stores/: auth.ts  friends.ts  servers.ts  ui.ts
frontend/src/lib/types/: domain.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
prompts/: ai-usage-analysis.md  promp_docs.txt  prompts_export.txt
