[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["ws", "macros", "multipart"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "time", "migrate"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "formatting"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
